Arreglo de imagenes y badge en Comprar

--- a/productos.html
+++ b/productos.html
@@ -69,7 +69,7 @@
                                     <span> Mi compra</span>
                                     <span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span>
                                 </div>
-                                <span class="registro__badge rounded-pill badge__cart">
+                                <span class="registro__badge badge rounded-pill badge__cart">
                                     0
                                 </span>
                             </li>
@@ -79,8 +79,8 @@
 
                 <div class="menu__pages">
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="productos.html" class="menu__pages--active">PRODUCTOS</a></li>
+                        <li><a href="index.html" class="menu__pages--active">HOME</a></li>
+                        <li><a href="productos.html">PRODUCTOS</a></li>
                         <li><a href="diseno.html">ARMA TU DISEÑO</a></li>
                         <li><a href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
@@ -97,7 +97,7 @@
                 </div> 
             </div>  
         </nav>
-    </header>  
+    </header> 
 
 <main>
     <!-- WHATSAPP ICON -->
@@ -108,10 +108,10 @@
         <ul class="products__menu--category">
             <li class="products__menu--item"><a href="#">Dormitorio <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
                 <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#"><span class="iconify subitem__icon" data-icon="fluent:bed-16-filled" data-inline="false"></span></a></li>
-                    <li class="products__submenu--item"><a href="#"><span class="iconify subitem__icon" data-icon="vs:table-alt" data-inline="false"></span></a></li>
-                    <li class="products__submenu--item"><a href="#"><span class="iconify subitem__icon" data-icon="mdi:wardrobe" data-inline="false"></span></a></li>
-                    <li class="products__submenu--item"><a href="https://icons8.com/icon/87011/estante-de-libro"></a></li>
+                    <li class="products__submenu--item"><a href="#">Camas</span></a></li>
+                    <li class="products__submenu--item"><a href="#">Mesas</span></a></li>
+                    <li class="products__submenu--item"><a href="#">Armarios</span></a></li>
+                    <li class="products__submenu--item"><a href="https://icons8.com/icon/87011/estante-de-libro"> Cabeceras</a></li>
                     <li class="products__submenu--item"><a href="#">Zapateros</a></li>
                     <li class="products__submenu--item"><a href="#">Decoración</a></li>
                     <li class="products__submenu--item"><a href="#"><span class="iconify subitem__icon" data-icon="majesticons:dots-circle" data-inline="false"></span></a></li>
