--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -65,7 +65,7 @@
                                     <span> Mi compra</span>
                                     <span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span>
                                 </div>
-                                <span class="registro__badge rounded-pill badge__cart">
+                                <span class="registro__badge badge rounded-pill badge__cart">
                                     0
                                 </span>
                             </li>
@@ -75,10 +75,10 @@
 
                 <div class="menu__pages">
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="index.html" class="menu__pages--active">HOME</a></li>
                         <li><a href="productos.html">PRODUCTOS</a></li>
                         <li><a href="diseno.html">ARMA TU DISEÑO</a></li>
-                        <li><a href="sobrenosotros.html" class="menu__pages--active">SOBRE NOSOTROS</a></li>
+                        <li><a href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
                     </ul>
                     <div>
