--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Decoración, muebles, hogar, diseño de interior, madera">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -142,8 +143,6 @@
     <!-- WHATSAPP ICON -->
     <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
 
-
-
     <section class="info">
         <div class="info__container info__container--borderright">
             <span class="iconify info__icon" data-icon="ic:baseline-design-services" data-inline="false"></span>
@@ -246,8 +245,7 @@
             </div>
         </article>
 
-        <hr>
-
+        <hr class="divisor">
     </section>
 
     <!-- ARMA TU DISENO SECTION -->
@@ -260,29 +258,51 @@
         </div>
     </section>
 
+    <hr class="divisor">
+
     <!-- CATEGORIAS -->
     <div class="categories">
-        <div class="card__category" id="card__category1">
+        <div class="card__category item" id="card__category1" data-aos="zoom-in" data-aos-delay="200">
+            <a href="work-single.html" class="item-wrap fancybox">
+                <div class="work-info">
+                <h3>Dormitorio</h3>
+                </div>
             <img src="images/categoria1.jpg" alt="Living">
+            </a>
         </div>
 
-        <div class="card__category" id="card__category2">
+        <div class="card__category item" id="card__category2" data-aos="zoom-in" data-aos-delay="200">
+            <a href="work-single.html" class="item-wrap fancybox">
+                <div class="work-info">
+                <h3>Living</h3>
+                </div>
             <img src="images/categoria2.jpg" alt="Living">
+            </a>
         </div>
 
-        <div class="card__category" id="card__category3">
+        <div class="card__category item" id="card__category3" data-aos="zoom-in" data-aos-delay="200">
+            <a href="work-single.html" class="item-wrap fancybox">
+                <div class="work-info">
+                <h3>Baño</h3>
+                </div>
             <img src="images/categoria3.jpg" alt="Baño">
+            </a>
         </div>
 
-        <div class="card__category" id="card__category4">
+        <div class="card__category item" id="card__category4" data-aos="zoom-in" data-aos-delay="200">
+            <a href="work-single.html" class="item-wrap fancybox">
+                <div class="work-info">
+                <h3>Organizadores</h3>
+                </div>
             <img src="images/categoria4.jpg" alt="Organizadores">
+            </a>
         </div>
     </div>  
 
     <!-- PROMOS DESTACADAS -->
 
     <section class="products">
-            <hr>
+            <hr class="divisor">
         <div class="header__emojis">
             <i class="em em-boom" aria-role="presentation" aria-label="COLLISION SYMBOL"></i>
             <h2>Promociones Destacadas</h2>
@@ -426,5 +446,9 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
