Arreglos en index

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="https://i.pinimg.com/564x/02/24/39/022439cf1203a9ec70c81d8cea0c5992.jpg" class="d-block w-100 hero__img1 img-fluid" alt="carrusel-lampara">
+                <img src="images/cliente-diseno2.jpg" class="d-block w-100 hero__img1 img-fluid" alt="carrusel-lampara">
                 <div class="carousel-caption d-none d-md-block">
                 <h1>OLIMPA DESIGN
                 <span>Los mejores productos para tu hogar.</span></h1>
@@ -180,7 +180,7 @@
         <article>
             <div class="carousel__estilos">
 
-                <a href="#content02" class="slider slider__left">&#5130;</a>
+                <!-- <a href="#content02" class="slider slider__left">&#5130;</a> -->
                 <a href="#content02" class="slider slider__right">&#5125;</a>
 
                 <div class="carousel__main">
@@ -212,7 +212,7 @@
                 <div class="card__img" id="prod1"></div>
                 <div class="card__text">
                     <h3>Mesa de Luz Nikita</h3>
-                    <span>$10.000</span>
+                    <span>$8.000</span>
                     <a href="#" class="vermas__btn">Ver más</a>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <div class="card__img" id="prod3"></div>
                 <div class="card__text">
                     <h3>Cómoda Nala</h3>
-                    <span>$12.000</span>
+                    <span>$16.500</span>
                     <a href="#" class="vermas__btn">Ver más</a>
                 </div>
             </div>
@@ -262,7 +262,7 @@
 
     <!-- CATEGORIAS -->
     <div class="categories">
-        <div class="card__category item" id="card__category1" data-aos="zoom-in" data-aos-delay="200">
+        <div class="card__category item" id="card__category1">
             <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
                 <h3>Dormitorio</h3>
@@ -271,7 +271,7 @@
             </a>
         </div>
 
-        <div class="card__category item" id="card__category2" data-aos="zoom-in" data-aos-delay="200">
+        <div class="card__category item" id="card__category2">
             <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
                 <h3>Living</h3>
@@ -280,7 +280,7 @@
             </a>
         </div>
 
-        <div class="card__category item" id="card__category3" data-aos="zoom-in" data-aos-delay="200">
+        <div class="card__category item" id="card__category3">
             <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
                 <h3>Baño</h3>
@@ -289,7 +289,7 @@
             </a>
         </div>
 
-        <div class="card__category item" id="card__category4" data-aos="zoom-in" data-aos-delay="200">
+        <div class="card__category item" id="card__category4">
             <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
                 <h3>Organizadores</h3>
@@ -313,8 +313,8 @@
                 <div class="gallery__prod">
                     <div class="card__img" id="prodprom1"></div>
                     <div class="card__text">
-                        <h3>Escritorio Happy</h3>
-                        <span>$10.000</span>
+                        <h3>Escritorio Athos</h3>
+                        <span>$8.200</span>
                         <a href="#" class="vermas__btn">Ver más</a>
                     </div>
                     <div class="badge--destacado">Más Vendidos</div>
@@ -324,7 +324,7 @@
                     <div class="card__img" id="prodprom2"></div>
                     <div class="card__text">
                         <h3>Cómoda Cleopatra</h3>
-                        <span>$10.000</span>
+                        <span>$14.800</span>
                         <a href="#" class="vermas__btn">Ver más</a>
                     </div>
                     <div class="badge--destacado">Más Vendidos</div>
@@ -375,8 +375,8 @@
     </div>
 
     <!-- MEDIOS DE PAGO -->
-    <section class="methods mediosDePago">
-        <div class="methods__content metodos">
+    <section class="methods">
+        <div class="methods__content">
             <h3>Medios de Pago</h3>
             <p>De 6 a 12 cuotas <span class="negrita">sin interés</span></p>
             <img src="images/tarjeta.png" alt="tarjeta"> 
