--- a/productos.html
+++ b/productos.html
@@ -114,7 +114,7 @@
                     <li class="products__submenu--item"><a href="https://icons8.com/icon/87011/estante-de-libro"> Cabeceras</a></li>
                     <li class="products__submenu--item"><a href="#">Zapateros</a></li>
                     <li class="products__submenu--item"><a href="#">Decoración</a></li>
-                    <li class="products__submenu--item"><a href="#"><span class="iconify subitem__icon" data-icon="majesticons:dots-circle" data-inline="false"></span></a></li>
+                    <li class="products__submenu--item"><a href="#"></a></li>
                 </ul>
             </li>
             <li class="products__menu--item"><a href="#">Cocina <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
