Arreglo en iconos de FAQ

--- a/contacto.html
+++ b/contacto.html
@@ -136,9 +136,9 @@
     </section>
 
     <!-- FAQ -->
-    <div class="productos__faq">
-        <div class="faq">
-            <span class="iconify faq__icon" data-icon="ic:baseline-published-with-changes" data-inline="false"></span>
+    <div class="productos__faq info">
+        <div class="faq info__container">
+            <span class="iconify faq__icon info__icon" data-icon="ic:baseline-published-with-changes" data-inline="false"></span>
             <h3>
                 Cambios y devoluciones
             </h3>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="faq">
-            <span class="iconify faq__icon" data-icon="mdi:truck-fast-outline" data-inline="false"></span>
+            <span class="iconify faq__icon info__icon" data-icon="mdi:truck-fast-outline" data-inline="false"></span>
             <h3>
                 Envíos a todo el país
             </h3>
@@ -154,7 +154,7 @@
         </div>
 
         <div class="faq">
-            <span class="iconify faq__icon" data-icon="carbon:chat-bot" data-inline="false"></span>
+            <span class="iconify faq__icon info__icon" data-icon="carbon:chat-bot" data-inline="false"></span>
             <h3>
                 Asesorate
             </h3>
