Cambios finales home

--- a/diseno.html
+++ b/diseno.html
@@ -166,7 +166,7 @@
 
     <article class="diseno__galery">  
         <h2>Mirá algunos de los diseños de nuestros clientes finalizados</h2>
-    <div class="container__galery">
+    <div class="container container__galery">
             <div class="galery__img img-fluid"><img src="images/cliente-diseno1.jpg" alt="diseno_de_cliente"></div>
             <div class="galery__img img-fluid"><img src="images/cliente-diseno2.jpg" alt="diseno_de_cliente"></div>
             <div class="galery__img img-fluid"><img src="images/cliente-diseno3.jpg" alt="diseno_de_cliente"></div>
