--- a/productos.html
+++ b/productos.html
@@ -111,7 +111,7 @@
                     <li class="products__submenu--item"><a href="#">Camas</span></a></li>
                     <li class="products__submenu--item"><a href="#">Mesas</span></a></li>
                     <li class="products__submenu--item"><a href="#">Armarios</span></a></li>
-                    <li class="products__submenu--item"><a href="https://icons8.com/icon/87011/estante-de-libro"> Cabeceras</a></li>
+                    <li class="products__submenu--item"><a href="#"> Cabeceras</a></li>
                     <li class="products__submenu--item"><a href="#">Zapateros</a></li>
                     <li class="products__submenu--item"><a href="#">Decoración</a></li>
                     <li class="products__submenu--item"><a href="#"></a></li>
@@ -214,7 +214,14 @@
     <!-- PRODUCTOS -->
     <section class="products__section">
         <div class="products__card">
-            <div class="products__image" id="prod1"></div>
+            <div class="products__image" id="prod1">
+                <div class="social">
+                    <a href=""><span class="iconify" data-icon="fluent:eye-show-16-filled"></span></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Olimpia</h3>
                 <span class="products__span">$12.000</span>
