--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </li>
                             <li type="button" class="registro__button position-relative">
                                 <div class="compras"> 
-                                    <span> Mi compra</span>
+                                    <span> Compras</span>
                                     <span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span>
                                 </div>
                                 <span class="registro__badge badge rounded-pill badge__cart">
@@ -171,46 +171,59 @@
     </section>
     
     <!-- NUEVOS LANZAMIENTOS -->
+
+    <article>
+        <div class="carousel__estilos">
+
+            <!-- <a href="#content02" class="slider slider__left">&#5130;</a> -->
+            <!-- <a href="#content02" class="slider slider__right">&#5125;</a> -->
+
+            <div class="carousel__main">
+                <div id="content1" class="content">
+                    <div class="carousel__img" id="carousel1__1"><p class="estilos__text">Nórdico</p></div>
+                    <div class="carousel__img" id="carousel1__2"><p class="estilos__text">Industrial</p></div>
+                    <div class="carousel__img" id="carousel1__3"><p class="estilos__text">Wabisabi</p></div>
+                    <div class="carousel__img" id="carousel1__4"><p class="estilos__text">Vintage</p></div>
+                    <div class="carousel__img" id="carousel1__5"><p class="estilos__text">Minimalista</p></div>
+                    <div class="carousel__img" id="carousel1__6"><p class="estilos__text">Boho</p></div>
+                    <div class="carousel__img" id="carousel1__7"><p class="estilos__text">Rústico</p></div>
+                </div>
+                <div id="content2" class="content">
+                    <div class="carousel__img">Étnico</div>
+                    <div class="carousel__img">Otro</div>
+                    <div class="carousel__img">Otro</div>
+                    <div class="carousel__img">Otro</div>
+                    <div class="carousel__img">Ecológico</div>
+                    <div class="carousel__img">Otro</div>
+                    <div class="carousel__img">Otro</div>
+                </div>
+            </div>
+
+        </div>
+    </article>
+
     <section class="products">
-        <div class="header__emojis">
-            <i class="em em-star-struck" aria-role="presentation" aria-label="GRINNING FACE WITH STAR EYES"></i>
-            <h2>Nuevos Lanzamientos</h2>
-            <i class="em em-fire" aria-role="presentation" aria-label="FIRE"></i>
+        <div class="header">
+            <div class="header__emojis">
+                <i class="em em-star-struck" aria-role="presentation" aria-label="GRINNING FACE WITH STAR EYES"></i>
+                <h2>Nuevos Lanzamientos</h2>
+                <i class="em em-fire" aria-role="presentation" aria-label="FIRE"></i>
+            </div>
+            <div class="more"><a href="productos.html">Ver todos <span>&#10137</span></a></div>
         </div>
         
-        <article>
-            <div class="carousel__estilos">
 
-                <!-- <a href="#content02" class="slider slider__left">&#5130;</a> -->
-                <a href="#content02" class="slider slider__right">&#5125;</a>
 
-                <div class="carousel__main">
-                    <div id="content1" class="content">
-                        <div class="carousel__img" id="carousel1__1"><p class="estilos__text">Nórdico</p></div>
-                        <div class="carousel__img" id="carousel1__2"><p class="estilos__text">Industrial</p></div>
-                        <div class="carousel__img" id="carousel1__3"><p class="estilos__text">Wabisabi</p></div>
-                        <div class="carousel__img" id="carousel1__4"><p class="estilos__text">Vintage</p></div>
-                        <div class="carousel__img" id="carousel1__5"><p class="estilos__text">Minimalista</p></div>
-                        <div class="carousel__img" id="carousel1__6"><p class="estilos__text">Boho</p></div>
-                        <div class="carousel__img" id="carousel1__7"><p class="estilos__text">Rústico</p></div>
-                    </div>
-                    <div id="content2" class="content">
-                        <div class="carousel__img">Étnico</div>
-                        <div class="carousel__img">Otro</div>
-                        <div class="carousel__img">Otro</div>
-                        <div class="carousel__img">Otro</div>
-                        <div class="carousel__img">Ecológico</div>
-                        <div class="carousel__img">Otro</div>
-                        <div class="carousel__img">Otro</div>
-                    </div>
-                </div>
-
-            </div>
-        </article>
+        <!-- <div class="more"><a href="productos.html">Ver todos <span>&#10137</span></a></div> -->
 
         <article class="products products__gallery">
             <div class="gallery__prod">
-                <div class="card__img" id="prod1"></div>
+                <div class="card__img" class="img-fluid" id="prod1">
+                    <div class="social">
+                        <a href=""><span class="iconify" data-icon="cil:cart"></span></a>
+                        <a href=""><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                    </div>
+                </div>
                 <div class="card__text">
                     <h3>Mesa de Luz Nikita</h3>
                     <span>$8.000</span>
@@ -220,7 +233,12 @@
             </div>
 
             <div class="gallery__prod">
-                <div class="card__img" id="prod2"></div>
+                <div class="card__img" id="prod2">
+                    <div class="social">
+                        <a href=""><span class="iconify" data-icon="cil:cart"></span></a>
+                        <a href=""><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                    </div>
+                </div>
                 <div class="card__text">
                     <h3>Mesa de Luz Kuzco</h3>
                     <span>$12.000</span>
@@ -230,7 +248,12 @@
             </div>
 
             <div class="gallery__prod">
-                <div class="card__img" id="prod3"></div>
+                <div class="card__img"  class="img-fluid" id="prod3">
+                    <div class="social">
+                        <a href=""><span class="iconify" data-icon="cil:cart"></span></a>
+                        <a href=""><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                    </div>
+                </div>
                 <div class="card__text">
                     <h3>Cómoda Nala</h3>
                     <span>$16.500</span>
@@ -240,7 +263,12 @@
             </div>
 
             <div class="gallery__prod">
-                <div class="card__img" id="prod4"></div>
+                <div class="card__img" id="prod4">
+                    <div class="social">
+                        <a href=""><span class="iconify" data-icon="cil:cart"></span></a>
+                        <a href=""><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                    </div>
+                </div>
                 <div class="card__text">
                     <h3>Kit Office</h3>
                     <span>$1.500</span>
@@ -313,6 +341,8 @@
             <h2>Promociones Destacadas</h2>
             <i class="em em-boom" aria-role="presentation" aria-label="COLLISION SYMBOL"></i>
         </div>
+
+        <div class="more"><a href="productos.html">Ver todos <span>&#10137</span></a></div>
 
             <article class="products products__gallery">
                 <div class="gallery__prod">
