--- a/productos.html
+++ b/productos.html
@@ -215,12 +215,6 @@
     <section class="products__section">
         <div class="products__card">
             <div class="products__image" id="prod1">
-                <div class="social">
-                    <a href=""><span class="iconify" data-icon="fluent:eye-show-16-filled"></span></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
             </div>
             <div class="products__text">
                 <h3>Mesa de Luz Olimpia</h3>
@@ -289,24 +283,24 @@
         <div class="products__card">
             <div class="products__image" id="prod8"></div>
             <div class="products__text">
-                <h3>Cómoda Tina</h3>
-                <span class="products__span">$10.000</span>
+                <h3>Cómoda Marble Nerón</h3>
+                <span class="products__span">$13.500</span>
                 <div class="products__btn"><a href="#">Comprar</a></div>
             </div>
         </div>
 
         <div class="products__card">
-            <div class="products__image"  id="prod9"></div>
+            <div class="products__image products__image--agotado" id="prod9"></div>
             <div class="products__text">
-                <h3>Cómoda Marble Nerón</h3>
-                <span class="products__span">$13.500</span>
+                <h3>Cómoda Tina</h3>
+                <span class="products__span">$10.000</span>
                 <div class="products__btn"><a href="#">Comprar</a></div>
             </div>
             <div class="badge--agotado">Agotado</div>
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod10"></div>
+            <div class="products__image products__image--agotado" id="prod10"></div>
             <div class="products__text">
                 <h3>Rack TV Nala</h3>
                 <span class="products__span">$16.000</span>
@@ -316,7 +310,7 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod11"></div>
+            <div class="products__image products__image--agotado" id="prod11"></div>
             <div class="products__text">
                 <h3>Rack XL Agustina</h3>
                 <span class="products__span">$23.000</span>
