Ajustes en carruseles

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
         </button>
     </div>
 
+    <div class="hero--sm">
+        <img src="images/cliente-diseno4.jpg" alt="encabezado">
+    </div>
+
 <main>
     <!-- WHATSAPP ICON -->
     <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
@@ -172,6 +176,8 @@
     <!-- NUEVOS LANZAMIENTOS -->
 
     <article>
+
+        <h2>Nuestros estilos</h2>
         <div class="carousel__estilos">
 
             <!-- <a href="#content02" class="slider slider__left">&#5130;</a> -->
@@ -337,6 +343,11 @@
         </div>
     </div>  
 
+        <!-- INSTAGRAM MESSAGE -->
+        <div class="banner__instagram">
+            <p>¡Ahora podes encontrarnos en nuestro instagram <span class="negrita">@olimpa.design!</span></p>
+        </div>
+
         <!-- SUSCRIBIRSE -->
         <div class="subscription">
             <div class="subscription__img"></div>
@@ -354,10 +365,7 @@
             </div>
         </div>
 
-    <!-- INSTAGRAM MESSAGE -->
-    <div class="instagram">
-        <span>Ahora podes encontrarnos en Instagram</span>
-    </div>
+
 
     <!-- PROMOS DESTACADAS -->
     <section class="products">
@@ -435,15 +443,14 @@
             </article>
     </section>
 
+
+
     <!-- MEDIOS DE PAGO -->
     <section class="methods">
         <div class="methods__content">
             <h3>Medios de Pago</h3>
             <p>De 6 a 12 cuotas <span class="negrita">sin interés</span></p>
             <img src="images/tarjeta.png" alt="tarjeta"> 
-        </div>
-        <div>
-            <span class="and__symbol">+</span>
         </div>
         <div class="methods__content">
             <h3>Formas de envío</h3>
