Fin del layout de Contact page

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link rel="icon" href="Images/icon.png">
-    <link rel="stylesheet" href="css/prueba.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
