--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <main>
     <!-- WHATSAPP ICON -->
-    <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
+    <a href="404.html"><span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span></a>
 
     <section class="info">
         <div class="info__container">
@@ -173,8 +173,7 @@
         </div>
     </section>
     
-    <!-- NUEVOS LANZAMIENTOS -->
-
+    <!-- CARROUSEL ESTILOS -->
     <article>
 
         <h2>Nuestros estilos</h2>
@@ -207,6 +206,7 @@
         </div>
     </article>
 
+    <!-- NUEVOS LANZAMIENTOS -->
     <section class="products">
         <div class="header">
             <div class="header__emojis">
@@ -217,10 +217,6 @@
             <div class="more"><a href="productos.html">Ver todos <span>&#10137</span></a></div>
         </div>
         
-
-
-        <!-- <div class="more"><a href="productos.html">Ver todos <span>&#10137</span></a></div> -->
-
         <article class="products products__gallery">
             <div class="gallery__prod">
                 <div class="card__img" class="img-fluid" id="prod1">
