--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -160,7 +160,7 @@
                 <button type="input" class="form__btn">Suscribirme</button>
             </div>
             <div class="arrepentimiento">
-                <li><a href="#">Botón de arrepentimiento</a></li>
+                <li><a href="404.html">Botón de arrepentimiento</a></li>
             </div>
         </div>
         
@@ -194,7 +194,7 @@
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="diseno.html">Crea un diseño</a></li>
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="sobrenosotros.html">Nosotros</a></li>
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="contacto.html">Contacto</a></li>
-                <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="#">Ayuda</a></li>
+                <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="404.html">Ayuda</a></li>
             </ul>
         </div>
     </section>
@@ -207,7 +207,7 @@
     </div>
     
     <div class="copyright">
-        <p> Copyright &copy; 2021 </p>
+        <p>Copyright &copy; 2021</p>
     </div>
 </footer>
 
