--- a/productos.html
+++ b/productos.html
@@ -215,6 +215,10 @@
     <section class="products__section">
         <div class="products__card">
             <div class="products__image" id="prod1">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
             </div>
             <div class="products__text">
                 <h3>Mesa de Luz Olimpia</h3>
@@ -225,7 +229,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod2"></div>
+            <div class="products__image" id="prod2">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Kuzco</h3>
                 <span class="products__span">$8.000</span>
@@ -235,7 +244,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod3"></div>
+            <div class="products__image" id="prod3">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Nymeria</h3>
                 <span class="products__span">$6.500</span>
@@ -244,27 +258,48 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod4"></div>
+            <div class="products__image" id="prod4">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Shenzi</h3>
-                <span class="products__span">$13.000</span>
+                <div class="products__sale">
+                    <span class="products__oldprice">$13.000</span>
+                    <span class="products__newprice">$8.500</span>
+                </div>
                 <div class="products__btn"><a href="#"><span>Comprar</span></a></div>
                 <div class="badge--sale">Sale</div>
             </div>
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod5"></div>
+            <div class="products__image" id="prod5">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Melek</h3>
-                <span class="products__span">$5.200</span>
+                <div class="products__sale">
+                    <span class="products__oldprice">$5.200</span>
+                    <span class="products__newprice">$4.799</span>
+                </div>
                 <div class="products__btn"><a href="#"><span>Comprar</span></a></div>
                 <div class="badge--sale">Sale</div>
             </div>
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod6"></div>
+            <div class="products__image" id="prod6">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Vitania</h3>
                 <span class="products__span">$8.300</span>
@@ -273,7 +308,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod7"></div>
+            <div class="products__image" id="prod7">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Mesa de Luz Silvestre</h3>
                 <span class="products__span">$9.100</span>
@@ -282,7 +322,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image" id="prod8"></div>
+            <div class="products__image" id="prod8">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Cómoda Marble Nerón</h3>
                 <span class="products__span">$13.500</span>
@@ -291,7 +336,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image products__image--agotado" id="prod9"></div>
+            <div class="products__image products__image--agotado" id="prod9">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Cómoda Tina</h3>
                 <span class="products__span">$10.000</span>
@@ -301,7 +351,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image products__image--agotado" id="prod10"></div>
+            <div class="products__image products__image--agotado" id="prod10">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Rack TV Nala</h3>
                 <span class="products__span">$16.000</span>
@@ -311,7 +366,12 @@
         </div>
 
         <div class="products__card">
-            <div class="products__image products__image--agotado" id="prod11"></div>
+            <div class="products__image products__image--agotado" id="prod11">
+                <div class="social">
+                    <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
+                    <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
+                </div>
+            </div>
             <div class="products__text">
                 <h3>Rack XL Agustina</h3>
                 <span class="products__span">$23.000</span>
@@ -369,7 +429,7 @@
                 <button type="input" class="form__btn">Suscribirme</button>
             </div>
             <div class="arrepentimiento">
-                <li><a href="#">Botón de arrepentimiento</a></li>
+                <li><a href="404.html">Botón de arrepentimiento</a></li>
             </div>
         </div>
         
@@ -403,7 +463,7 @@
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="diseno.html">Crea un diseño</a></li>
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="sobrenosotros.html">Nosotros</a></li>
                 <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="contacto.html">Contacto</a></li>
-                <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="#">Ayuda</a></li>
+                <li><span class="iconify chevron--right" data-icon="fa-solid:chevron-right"></span><a href="404.html">Ayuda</a></li>
             </ul>
         </div>
     </section>
@@ -416,7 +476,7 @@
     </div>
     
     <div class="copyright">
-        <p> Copyright &copy; 2021 </p>
+        <p>Copyright &copy; 2021</p>
     </div>
 </footer>
 
