Arreglo de Hamburger menu

--- a/contacto.html
+++ b/contacto.html
@@ -180,7 +180,7 @@
                 <h3>
                     Envíos a todo el país
                 </h3>
-                <p>Consultá tiempos y costos</p>
+                <p>Consultá nuestros tiempos y costos para tu locación</p>
             </div>
 
             <div class="faq">
