--- a/diseno.html
+++ b/diseno.html
@@ -110,19 +110,25 @@
             <!-- <i class="em em-tada" aria-role="presentation" aria-label="PARTY POPPER"></i> -->
 
         <div class="list__container">
-        <ul class="unordered__list">
-            <li>I</li>
-            <span>Escuchamos tu idea</span>
-            <P>Nos juntamos con vos a escuchar tus ideas de decoración</P>
+        <div class="list">
+            <div class="list__card">
+                <div class="list__number">I</div>
+                <span>Escuchamos tu idea</span>
+                <P>Nos juntamos con vos a escuchar tus ideas de decoración</P>
+            </div>
 
-            <li>II</li>
-            <span>La maquetamos</span>
-            <p>Creamos un modelo 3d de tu idea y le realizamos una cotización</p>
+            <div class="list__card">
+                <div class="list__number">II</div>
+                <span>La maquetamos</span>
+                <p>Creamos un modelo 3d de tu idea y le realizamos una cotización</p>
+            </div>
 
-            <li>III</li>
-            <span>La creamos</span>
-            <p>Creamos el diseño final de tu idea</p>
-        </ul>
+            <div class="list__card">
+                <div class="list__number">III</div>
+                <span>La creamos</span>
+                <p>Creamos el diseño final de tu idea</p>
+            </div>
+        </div>
         </div>
         <!-- </article> -->
     
@@ -139,6 +145,85 @@
                     <div class="gallery__img img-fluid"><img src="images/cliente-diseno7.jpg" alt="diseno_de_cliente"></div>
             </div>
         </article>
+        
+    <!-- GALERIA DE DISEÑOS -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6 colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-2 colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-3 colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+        </div>
+        <div class="row">
+            <div class="col-3 colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-2 colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-6 colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+        </div>
+    </div>
+
+    <!-- <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row g-0">
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-1.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-2.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-3.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-4.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-5.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-6.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-7.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+        <div class="gallery-item">
+            <img src="images/galeria/gallery-8.jpg" alt="foto de nuestro diseño" class="img-fluid">
+            </a>
+        </div>
+        </div>
+
+    </div>
+
+    </div> -->
 
     <!-- TESTIMONIALS -->
     <div class="demo">
