--- a/index.html
+++ b/index.html
@@ -28,20 +28,36 @@
 
             <div class="menu--small">
                 <ul class="menu__list--sm">
-                    <li>
-                        <a href="#"><span class="iconify menu__hamburguer icon" data-icon="whh:menu" data-inline="false"></span></a>
-                    </li>
+                        <div class="hamburger__menu">
+                            <input type="checkbox" class="toggler">
+                            <div class="hamburger"><div></div></div>
+                            <div class="menu">
+                                <div>
+                                <div>
+                                    <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="productos.html">Productos</a></li>
+                                    <li><a href="diseno.html">Armá tu diseño</a></li>
+                                    <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+                                    <li><a href="contacto.html">Contacto</a></li>
+                                    </ul>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
                     <li>
                         <a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a>
                     </li>
-                    <ul class="menu__icons--end">
-                        <li>
-                            <span class="iconify icon__search--ms icon" data-icon="feather:search" data-inline="false"></span>
-                        </li>
-                        <li>
-                            <a href="#"><span class="iconify icon__cart icon" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
-                        </li>
-                    </ul>
+                    <li>
+                        <ul class="menu__icons--end">
+                            <li>
+                                <span class="iconify icon__search--ms icon" data-icon="feather:search" data-inline="false"></span>
+                            </li>
+                            <li>
+                                <a href="#"><span class="iconify icon__cart icon" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
 
@@ -139,9 +155,9 @@
         </button>
     </div>
 
-    <div class="hero--sm">
+    <!-- <div class="hero--sm">
         <img src="images/cliente-diseno4.jpg" alt="encabezado">
-    </div>
+    </div> -->
 
 <main>
     <!-- WHATSAPP ICON -->
